k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kidneycare
  labels:
    app.kubernetes.io/name: kidneycare
